[package]
name = "zoomies"
version = "0.1.0"
authors = ["Cameron Dart <cdart2@illinois.edu>"]
license = "MIT"
description = "An asynchronous DogStatsD client."
documentation = "https://github.com/SkamDart/zoomies"
keywords = [ "datadog", "dogstatsd", "client", "async" ]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"]}
num-traits = "0.2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "example"
path = "src/example.rs"
